# Pacman-AP-2025-2026

./: CMakeLists.txt  README.md
assets/conf/: Entity_Texture.json  graf_ghosts.json  graf_pacman.json  wallkmap1.json
include/const/: Constant.h  DebugConstants.h
include/core/: Actor.h  Entity.h  Game.h  Stage.h
include/func/: Constants .h  func_get_json_data.h  func_get_sprite_from_json.h  func_next_integer_coordinate.h  func_open_file.h
include/graphics/: SFML_Render.h  Sprite_Group.h
include/graphics/info/: Expression_Info.h  Status_Info.h
include/graphics/view/: Entity_View.h
include/logic/: DeltaTimer.h  LogicMap.h  Observer.h  Tile.h  TileGrid.h  Tile_Grid.h  World.h
include/logic/collision/: AABB.h  Collision_Control.h  HitBoxe.h  HitBoxe_Circle.h  HitBoxe_Shape.h  Separating_Axis_Theorem.h  World_CC.h
include/logic/math/: Matrix.h  Vector.h  Vector2.h  Vector3.h
include/math/: Matrix.h  Vector.h  Vector2.h  Vector3.h
source/: main.cpp
source/core/: Actor.cpp  CMakeLists.txt  Entity.cpp
source/graphics/: CMakeLists.txt  SFML_Render.cpp  Sprite_Group.cpp
source/logic/: CMakeLists.txt  DeltaTimer.cpp  LogicMap.cpp  Tile.cpp  TileGrid.cpp  Tile_Grid.cpp
source/logic/collision/: HitBoxe.cpp  HitBoxe_Circle.cpp  HitBoxe_Shape.cpp  Separating_Axis_Theorem.cpp  World_CC.cpp
source/logic/math/: Matrix.cpp  Vector.cpp  Vector2.cpp  Vector3.cpp
source/math/: CMakeLists.txt  Matrix.cpp  Vector2.cpp  Vector3.cpp
src/: main.cpp
tests/: CMakeLists.txt  collision.cpp  main.cpp
